# Hardcode-Tray

./: .coveralls.yml  .editorconfig  .gitignore  .pylintrc  .travis.yml  ISSUE_TEMPLATE  LICENSE.BSD-3-Clause  LICENSE.GPL-3.0  NOTICE  README.md  TODO.md  circle.yml  codecov.yml  config.json  const.py.in  db.csv  hardcode-tray  hardcode-tray.py  hardcode-tray.py.in  install.sh  meson.build  meson_post_install.py  script.py  uninstall.sh  wewechat.json
.github/: ISSUE_TEMPLATE  pull.yml
HardcodeTray/: app.py  backup.py  const.py  decorators.py  enum.py  icon.py  path.py  theme.py  tools.py  utils.py
HardcodeTray/applications/: __init__.py  application.py  electron.py  nwjs.py  pak.py  qt.py  zip.py
HardcodeTray/config/: __init__.py  arguments.py  json.py  system.py
HardcodeTray/fs/: __init__.py  directory.py  file.py
HardcodeTray/modules/: backup.py  icon.py  log.py  parser.py  path.py  theme.py
HardcodeTray/parser/: __init__.py  database.py  qt.py
HardcodeTray/svg/: __init__.py  cairosvg.py  imagemagick.py  inkscape.py  rsvgconvert.py  svg.py  svgexport.py
HardcodeTray/utils/: cli.py  dict.py  fs.py  icons.py  os.py  scaling_factor.py
data/: config.json  install.sh  meson.build  uninstall.sh
data/database/: 1password.electron.json  acestream.json  anatine.json  android-messages-desktop.electron.json  ao.electron.json  bauh.json  bitcoin.json  bitwarden.electron.json  bluemail.electron.json  brave.json  calendar-indicator.json  caprine.electron.json  caprine.json  caprine_ele.json  catch-indicator.json  (+200 more)
database/: anatine  anatine.json  bitcoin  bitcoin.json  calendar-indicator  calendar-indicator.json  caprine  caprine.json  caprine_ele.json  catch-indicator  catch-indicator.json  china-weather.json  chromium  chromium.json  cisco-anyconnect.json  clementine  clementine.json  cryptfolder-indicator  cryptfolder-indicator.json  cryptfolder-indicator.txt  discord  discord-canary.json  discord.json  disper-indicator  disper-indicator.json  dropbox  dropbox.json  flareget  flareget.json  franz  franz.json  franz2  franz_ele  franz_ele.json  google-chrome  google-chrome.json  google-music-manager  google-music-manager.json  google-tasks-indicator  google-tasks-indicator.json  (+109 more)
db/: my-weather-indicator.csv  pomodoro-indicator.csv  touchpad-indicator.csv
license/: BSD  README.md
modules/: const.py  data.py  data_pack.py  decorators.py  dropbox.py  icon.py  parser.py  theme.py  tools.py  utils.py
po/: LINGUAS  POTFILES  de.po  hardcode-tray.pot  nl_NL.po  ru.po
src/: app.py  const.py  decorators.py  enum.py  path.py  tools.py  utils.py
tests/: pylint.sh  utils.py  validate-json.py
(+106 files in other folders)
